--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,22 @@ description = "A simple game engine"
 license = "MIT"
 repository = "https://github.com/uysalerinc/wisteria"
 
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = [
+    "crates/*",
+]
+
+[features]
+# TODO
+
 [dependencies]
+wisteria_core = { path = "crates/wisteria_core"}
+
+[lints]
+workspace = true
+
+[[example]]
+name= "sandbox"
+path= "examples/sandbox.rs"
