--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A simple game engine"
 license = "MIT"
-repository = "https://github.com/uysalerinc/wisteria"
+repository = "https://github.com/uysalerinc/wisteria-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
